# my-research-00

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/images/: new.ppm
data/io/ancientOcr/: hello.py
data/io/mnist/: hello.py
dependencies/tinylogger/tinylogger/: tinylogger.h
dependencies/zzhlogger/: README.md
doc/: Open3D.md  cuDNN.md
doc/documations/: main.md
doc/notes/: dependencies.args.md  dependencies.filesystem.md  dependencies.imgui.md  main.md  tools.compiler.md
doc/notes.main/: dataset.mnist.md  dependencies.boost.md  dependencies.cutlass.md  dependencies.opencv.md  dependencies.taichi.md  eigen.source.md  fundations.game-engine.md  fundations.rtow.md  libs.sail.md  libs.testbed.md  main.md  math.linear_algebra.md  numerical_methods.md  ref.algorithm.md  reimpl.md  reports.taichi-raytracer.md  stl.vector.md  tools.cuda.md  tools.googletest.md  tools.graphviz.md  tools.pytorchcpp.md
doc/notes.nerf/: data.md  dependencies.imageio.md  main.md  tools.tensorboard.md
doc/notes.nerfmm/: dependencies.imageio.md  dependencies.open3d.md  main.md
doc/notes.ngp/: dependencies.cuda.md  dependencies.eigen.md  dependencies.pybind11.md  dependencies.tiny-cuda-nn.md  libs.chrono.md  libs.functional.md  main.md  tools.cmake.md
include/: mission.h
include/neural-graphics-primitives/: bounding_box.cuh  common.h  common_device.cuh  nerf_loader.h  random_val.cuh  render_buffer.h  shared_queue.h  testbed.h  thread_pool.h  triangle.cuh
libs/: CMakeLists.txt
libs/include/sail/: common.h  sail.h
libs/include/sail/SAIL_MATH/: Dence.h
libs/include/sail/parallel/: cuda_graph.h  gpu_matrix.h  gpu_memory.h
libs/include/sail/parallel/nn/: loss.h
libs/include/sail/parallel/nn/losses/: l1.h
libs/sail/: CMakeLists.txt  README.md  sail.cc
libs/sail/algorithm/: README.md
libs/sail/core/: README.md
libs/sail/include/sail/: algorithm.h  common.h  core.h  hello.h  math.h
libs/sail/include/sail/algorithm/: array.hpp  list.hpp  node.hpp
libs/sail/include/sail/algorithm/common/: list.hpp  node.hpp
libs/sail/include/sail/core/: timer.hpp
libs/sail/include/sail/math/: matrix.hpp  vector.hpp
libs/sail/nn/: README.md
libs/sail/sail/algorithm/: list.cc  select_k_max.cc
libs/sail/sail/core/: README.md  hello.cc  timer.cc
libs/sail/utest/: CMakeLists.txt  hello_test.cc
libs/sail/utest/algorithm/: lc01.cc  list.test.cc  node.test.cc  select.test.cc
libs/sail/utest/core/: cpp_basic.test.cc
libs/sail/utest/dependencies/: eigen_basic.test.cc
reImpl/: CMakeCache.txt
reImpl/hellos/cpp/basic/: CMakeLists.txt  basicIO.cc  basicStr.cc  readAdvanced.cc
reImpl/hellos/opencv/: hello.py
reImpl/learnopengl/: CMakeLists.txt  hello_triangle.cc  hello_window.cc  main.cc
reImpl/mini3d/: mini3d.c  mini3d.cc
reImpl/nerf/: load_llff.py  main.py  run_nerf.py  utils.py
reImpl/nerfmm/: environment.yml
reImpl/nerfmm/tasks/nerfmm/: train.py
reImpl/ngp/: CMakeLists.hot.txt  CMakeLists.txt  CMakeLists.txt.bk
reImpl/ngp/src/: common_device.cu  main.cu  main0.cu  testbed.cu  testbed_image.cu
reImpl/rtow/: CMakeLists.txt  camera.h  color.h  final.cc  hittable.h  hittable_list.h  main.cc  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
reImpl/rtow/taichi_impl/: camera.py  common.py  hittable.py  main.py  ray.py
reImpl/tcnn/: CMakeLists.txt
scripts/: compile_shaders.ps1
src/: main.cu  plane_draw.cc
src/missions/: mis01.cc  mis02.cc
